Rewrite `clean` task Using mainmast without `knoptions` Beta release support with `--beta` key

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "OK-Changer",
   "version": "1.8.3",
   "dependencies": {
-    "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-if": "^1.2.5",
     "gulp-jade": "^1.0.0",
     "gulp-less": "^3.0.3",
+    "gulp-rimraf": "^0.1.1",
     "gulp-watch": "^4.2.4",
     "gulp-zip": "^3.0.2",
     "merge-stream": "^0.1.7",
