Removed old builder files

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,11 @@
 # Source of compiler
 project/*
 release/*
-build/chrome/*
-build/opera/*
-/a/*
-/debug/*
+debug/*
 
-*.crx
-*.nex
-/nbproject/*
+# IDE files
 *.sublime-workspace
+nbproject/*
 
+# npm
 node_modules/*
