Using `jsonsave` Update `package.json` version Moved `config/` to `./config.json`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "OK-Changer",
+  "description": "Simple design extension for ok.ru",
   "version": "1.8.3",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LestaD/OK-Changer.git"
+  },
+  "author": "LestaD",
   "dependencies": {
     "gulp": "^3.8.11",
     "gulp-if": "^1.2.5",
@@ -9,6 +15,7 @@
     "gulp-rimraf": "^0.1.1",
     "gulp-watch": "^4.2.4",
     "gulp-zip": "^3.0.2",
+    "jsonsave": "1.0.*",
     "merge-stream": "^0.1.7",
     "minimist": "^1.1.1"
   }
