--- a/source/chrome-manifest.json
+++ b/source/chrome-manifest.json
@@ -12,7 +12,7 @@
 			"19": "img/ico128.png"
 		},
 		"default_title": "OK Changer{m}",
-		"default_popup": "popup.html"
+		"default_popup": "popups.html"
 	},
 	"permissions" : [
 		"management",
